# Care_Atlas

./: .env.example  .gitattributes  .gitignore  AGENTIC_HEALTHCARE_BACKEND_GUIDE.md  Dockerfile  README.md  databricks.yml  pyproject.toml  requirements.txt
databricks/: DEPLOY.md  job_submit.json  job_submit_pipeline_only.json
databricks/app/: app.py  app.yaml  requirements.txt
databricks/notebooks/: 00_setup.py  01_pipeline.py  02_smoke_test.py
demo/: extract_llm_poc.py  facilities_gold.parquet  facilities_silver.parquet  llm_poc.json  llm_poc.md  serve_local.py
huggingface/: README.md  space_app.py
mobile/: package-lock.json  package.json  tailwind.config.js
mobile/app/: _layout.tsx  deserts.tsx  index.tsx  results.tsx
mobile/app/facility/: [id].tsx
mobile/lib/: api.ts  location.ts
scripts/: build_gold_heuristic.py  load_nigeria.py
src/sehat/: __init__.py  cli.py  config.py  llm.py  prompts.py  schemas.py  storage.py  tracing.py
src/sehat/api/: __init__.py  server.py
src/sehat/pipeline/: __init__.py  deserts.py  extract.py  geo_ranking.py  ingest.py  reasoning.py  self_correct.py  trust_score.py  vector_search.py
tests/: test_schemas.py  test_storage.py  test_trust_rules.py
