[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sehat-e-aam"
version = "0.1.0"
description = "Agentic Healthcare Intelligence System for Indian healthcare facilities"
readme = "README.md"
requires-python = ">=3.10,<3.15"
authors = [{ name = "Sehat-e-Aam Team" }]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "duckdb>=0.10",
    "openpyxl>=3.1",
    "numpy>=1.26",
    "faiss-cpu>=1.8",
    "sentence-transformers>=2.7",
    "mlflow>=2.13",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "tenacity>=8.2",
    "databricks-sdk>=0.28",
    "openai>=1.30",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
sehat = "sehat.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
